--- a/colors/estilo.css
+++ b/colors/estilo.css
@@ -1,182 +1,140 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&family=Oswald:wght@600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Ubuntu:wght@400;700&display=swap');
+/* 
+font-family: 'Barlow', sans-serif;
+font-family: 'Ubuntu', sans-serif;
+ */
 
-
-*, *::after, *::before{
-    box-sizing: border-box;
-}
 
 html{
-    font-size: 18px;   /* !important pode ser usado para fazer uma regr prevalecer, ainda que seja menos específica*/
-    
-    /* --fontbase:18px; você declara uma variavel no css 
-    font-size: var(--fontbase) recuperação da varivel*/
-    scroll-behavior: smooth;
-    scroll-padding-top: 130px;
-}
-
-body{
+    font-size: 18px; 
+ }
+body {
     margin: 0;
-    padding: 0;
-    font-family: 'Merriweather', serif;
-    
+    box-sizing: border-box;
+    font-family: 'Barlow', sans-serif;
+    background: #81c9a7;
 }
 
-img, iframe, video {
-    max-width: 100%;
-    
-}
 h1{
-    font-family: 'Oswald', sans-serif;
-    font-size: 3rem;
-}
-header{
-    background-color: #fff;
     text-align: center;
-    position: sticky;
-    top:0;
-    padding-bottom: 0.5rem;
+    font-family: 'Ubuntu' 700, sans-serif;
+    font-size: 1.2rem;
+
 
 }
-nav ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
+
+img {
+    max-width: 100%;
+}
+
+
+nav {
+    background-color: #6699FF;
+    line-height: 70px;
     display: flex;
     justify-content: space-around;
-
-}
-nav a{
-    text-decoration: none;
-    color: #333;
-    font-family: 'Oswald', sans-serif;
-    font-weight: normal;
-    padding: .5rem .6rem;
-    transition: all 0.8s;
-}
-nav a:hover{
-    color: rgb(255, 238, 60);
-    background-color: black;
-    
 }
 
-main, section{
-    height: 73vh;
-    display: flex;
-    align-items: center;
+nav ul {
     margin: 0;
-}
- .conteudo{
-    width: 90%;
-    margin: auto;
-    max-width: 800px;
-}
+    padding: 0;
+    list-style: none;
 
-.conteudo h1{
-    text-transform: uppercase;
-    font-family: 'Oswald', sans-serif;
-    font-size: 3rem;
-    margin-bottom: 1rem;
-}
-.conteudo p {
-    line-height: 2rem;
-    line
+    display: flex;
+    justify-content: space-around;
 }
 
 
-#produto {
-    background-image: url(imagens/h13-background-img-1.jpg);
-    background-size: cover;
-    background-position-x: center;
-}
-
-.cta {
+nav a {
+    color: #fff;
     text-decoration: none;
-    background-color: rgb(255, 238, 60);
-    font-family: 'Oswald', sans-serif;
-    font-weight: 600;
-    padding: 1.15rem 1.8rem;
+    text-transform: capitalize;  /* transforma o texto em maiúsculas, minúsculas ou apenas a primeira letra maiúscula */
+    padding: 1rem 1rem;
     transition: all 0.8s;
-    color: black;
-    font-size: .8rem;
-    line-height: 5.5rem;
-    letter-spacing: 3px;  /* controla o espaço entre as letras/caracteres */
-    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-family:'Ubuntu700';
+    border-radius: 20px;
+    font-weight: normal;
 }
 
-.verde-agua {
-    background-color: #26ccca;
-    color: #fff;
-}
-.cta::before{
-    content: "+";
-    margin-right: 0.8rm;
+nav a:hover, nav a:active {
+    color: #6699FF;
+    text-shadow: rgb(121, 236, 156) 30px 10px 20px; /* sombra no texto - valores na ordem: cor, desloc. horizontal, desloc. vertical, suavização da sombra */
+    background-color: #81c9a7;
 }
 
-#ux{
-    color: #fff;
-    background-image: url(imagens/h13-background-img-2.jpg);
-   
+.destaque{
+    height: 700px;
+    background-color: #6699FF ;
 }
-#motion {
-    background-image: url(imagens/h13-background-img-3.jpg);
-    background-size: cover;
-    background-position-x: center;
+
+footer {
+    color: #fff;
+    background-color: #3bbF82;
+    text-align: center;
 
 }
-#brand{
-    background-image: url(imagens/h13-background-img-4.jpg);
-    color: #fff;
+
+.colunas {
+    display: flex;
+    flex-wrap: wrap; /* determina quebra de conteúdo flexbox */
+    justify-content: space-between;
+    background-color: #81c9a7 ;
+
+}
+.col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12 {
+    width: 100%;
+    margin: 10px;
+  
+}
+
+
+
+/* .form label {
+    font-weight: bold;
+    border-bottom: 1px solid #300040;
+    margin-bottom: 20px;
+    width: 20%;
+    display: block; /*Transforma o conteúdo em um bloco*/
+ /*   display: inline-block; 
+} /*Caso a porcentagem não funcione, se dá por motivo de display inline block*/
+
+
+
+
+/*  pagina infancia    */
+
+
+.tar1, .tar2, .tar3{
+    background-color: #3bbF82;
+    width: 98%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 10px;
+    text-align: justify;
+    
+    
     
 }
-.texto-cinza{
-    color: #b8b8b8;
-}
-#print{
-    color: #fff;
-    background-size: cover;
-    background-image: url(imagens/h13-background-img-5.jpg);
-    background-position-x: center;
 
-}
 
-/*para telas acima de 700px */
 
-@media screen and (min-width:700px) {
+@media screen and (min-width: 760px) {
 
-    header{
+    
+    .colunas {
         display: flex;
-        height: 10vh;
-        justify-content: space-around;
-        align-items: center
+        flex-wrap: wrap; /* determina quebra de conteúdo flexbox */
+        justify-content: space-between;
+        background-color: #81c9a7 ;
+    }
+        .col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12 {
 
-    }
+            width: 30.5%;
+            margin: 10px;
+        }
 
-    #logo{
-        width: 20%;
+        .destaque{ 
+        height: 1250px;
+        }
     }
-
-    header nav{
-        width: 70%;
-        max-width: 800px;
-
-    }
-
-    #produto, #motion, #print {
-        background-attachment: fixed;
-    }
-
-    .conteudo{
-        width: 50%;
-        max-width: 800px;
-        margin: 0;
-        margin-left: 4rem;
-    }
-    .conteudo h1{
-        font-size: 5rem;
-        margin-bottom: -0.6rem;
-    }
-    nav a{
-        font-size: 1.1rem;
-        padding: 0.7rem 1.0rem;
-    }
-}
